--- a/gcc/ChangeLog.1
+++ b/gcc/ChangeLog.1
@@ -469,7 +469,7 @@ Sun May  2 15:16:42 1999  Joseph S. Myers  <jsm28@cam.ac.uk>
 	(ASSEMBLER_DIALECT): Define.
 	(CONDITIONAL_REGISTER_USAGE): Rename floating point registers if
 	required for the UNIX assembler.
-	(ASM_OUTPUT_INT): Remove.  The compiler will synthesise it.
+	(ASM_OUTPUT_INT): Remove.  The compiler will synthesize it.
 	(ASM_OUTPUT_ADDR_VEC_PROLOGUE): Remove.
 	(ASM_OPEN_PAREN, ASM_CLOSE_PAREN): Change to "[" and "]".
 	(TRAMPOLINE_TEMPLATE): Use ASM_OUTPUT_SHORT.
@@ -4454,7 +4454,7 @@ Mon Feb 22 19:36:33 1999  Andrew Cagney  <cagney@b1.cygnus.com>
 	StrongARM.
 	(arm_is_6_or_7): New variable: true iff the target processor is an
 	ARM6 or and ARM7.
-	(arm_select): Fields reorganised.
+	(arm_select): Fields reorganized.
 	(struct processors): processor_type field removed.
 	(all_procs): Remove.
 	(all_cores): New array: Definitions of all known ARM cpu cores.
