--- a/gcc/ChangeLog.2
+++ b/gcc/ChangeLog.2
@@ -2434,10 +2434,10 @@ Thu Nov 18 11:10:03 1999  Jan Hubicka  <hubicka@freesoft.cz>
 
 1999-11-18  Nick Clifton  <nickc@cygnus.com>
 
-	* toplev.c (main): Correctly detect an unrecognised option.
+	* toplev.c (main): Correctly detect an unrecognized option.
 
 	* cppinit.c (cpp_handle_option): Do not claim to have consumed
-	a -f option if it has not been recognised.
+	a -f option if it has not been recognized.
 
 Thu Nov 18 00:59:11 1999  Michael Gschwind  <mikeg@alagoas.watson.ibm.com>
 
@@ -4782,7 +4782,7 @@ Tue Oct 19 15:26:11 1999  Richard Earnshaw  (rearnsha@arm.com)
 Tue Oct 19 14:01:34 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* toplev.c (main): Do not generate an error message if an
-	unrecognised command line switch is recognisable by another
+	unrecognized command line switch is recognisable by another
 	language.  If extra_warnings are enabled, then generate a
 	warning message instead.
 
@@ -4960,7 +4960,7 @@ Sat Oct 16 13:42:29 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
 Sat Oct 16 13:37:46 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
-	* config/c4x/c4x.md (movstrqi_small): Utilise parallel move
+	* config/c4x/c4x.md (movstrqi_small): Utilize parallel move
 	instructions.
 
 Sat Oct 16 13:26:47 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
@@ -8316,7 +8316,7 @@ Thu Sep  9 13:46:06 1999  Geoffrey Keating  <geoffk@cygnus.com>
 	* cppexp.c (cpp_lex): Handle `defined (xxx)' for poisoned xxx.
 	Include cpphash.h.
 	* cpphash.c (special_symbol): Handle plain `xxx' for poisoned xxx.
-	* cpplib.c (do_define): Generalise to handle poisoned definitions,
+	* cpplib.c (do_define): Generalize to handle poisoned definitions,
 	redefining poisoned identifiers, etc.
 	(do_undef): Don't allow poisoned identifiers to be undefined.
 	(do_pragma): Add #pragma poison.
@@ -8325,7 +8325,7 @@ Thu Sep  9 13:46:06 1999  Geoffrey Keating  <geoffk@cygnus.com>
 	* cccp.c: Add T_POISON node type.
 	(special_symbol): Handle `defined(xxx)' and plain `xxx' for
 	poisoned xxx.
-	(do_define): Generalise to handle poisoned definitions,
+	(do_define): Generalize to handle poisoned definitions,
 	redefining poisoned identifiers, etc.
 	(do_undef): Don't allow poisoned identifiers to be undefined.
 	(do_pragma): Add #pragma poison.
@@ -14093,7 +14093,7 @@ Wed Jun  2 12:25:55 1999  Richard Henderson  <rth@cygnus.com>
 
 Wed Jun  2 08:42:55 1999  Nick Clifton  <nickc@cygnus.com>
 
-	* config/arm/tcoff.h (USER_LABEL_PREFIX): Synchronise with
+	* config/arm/tcoff.h (USER_LABEL_PREFIX): Synchronize with
 	definition in config/arm/coff.h
 	* config/arm/coff.h: Add comment about USER_LABEL_PREFIX.
 
