--- a/gcc/ChangeLog.3
+++ b/gcc/ChangeLog.3
@@ -10805,7 +10805,7 @@ Wed Feb 23 13:00:06 CET 2000  Jan Hubicka  <jh@suse.cz>
 
 	* gcc.c (do_spec_1): Catch the case where %* is used in a
 	substitution pattern, but it has not been initialized.
-	Issue a meaningful error message if an unrecognised operator
+	Issue a meaningful error message if an unrecognized operator
 	is encountered in a spec string.
 
 2000-03-14  Richard Earnshaw <rearnsha@arm.com>
