--- a/gcc/ChangeLog.5
+++ b/gcc/ChangeLog.5
@@ -11536,7 +11536,7 @@ Mon Jan 29 20:38:19 2001  Christopher Faylor <cgf@cygnus.com>
 
 2001-01-27  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
 
-	* fixproto: Correctly install synthesised unistd.h and stdlib.h when
+	* fixproto: Correctly install synthesized unistd.h and stdlib.h when
 	they didn't need fixing.
 
 2001-01-27  Janis Johnson <janis@us.ibm.com>
@@ -11922,7 +11922,7 @@ Sun Jan 21 09:44:17 2001  Denis Chertykov  <denisc@overta.ru>
 
 	* config/avr/avr.c (ret_cond_branch): New argument (reverse) added.
 	If REVERSE nonzero then condition code in X must be reversed.
-	(encode_section_info): Optimise if/else.
+	(encode_section_info): Optimize if/else.
 	(avr_function_value): Fix formatting.
 
 	* config/avr/avr.md (branch): Call to ret_cond_branch changed.
