--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -142,7 +142,7 @@
 
 	* c-parse.in (select_or_iter_stmt): Use truthvalue_conversion
 	on the condition of a FOR statement, so that it gets typechecked
-	and optimised.
+	and optimized.
 
 2000-12-29  Alexandre Oliva  <aoliva@redhat.com>
 
