--- a/gcc/ChangeLog.6
+++ b/gcc/ChangeLog.6
@@ -995,7 +995,7 @@ Mon Dec 17 18:27:52 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 Mon Dec 17 17:57:05 CET 2001  Jan Hubicka  <jh@suse.cz>
 
-	* Makefile.in (cfgcleanup.o): Add cselib.h dependancy.
+	* Makefile.in (cfgcleanup.o): Add cselib.h dependency.
 	* basic-block.h (CLEANUP_THREADING): New constant.
 	* cfgcleanup.c: Include cselib.h
 	(thread_jump, mark_effect): New functions.
