--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-15  Krister Walfridsson  <cato@df.lth.se>
+
+	* lib/old-dejagnu.exp (old-dejagnu) Improve test for ICE.
+
 2002-09-15  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/inherit/using2.C: New test.
