* ia64/aix.h (TARGET_OS_CPP_BUILTINS): Fix typo.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57170 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* ia64/aix.h (TARGET_OS_CPP_BUILTINS): Fix typo.
+
 2002-09-15  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* ChangeLog: Follow spelling conventions.
