* lang.c: Fix spelling conventions.
From-SVN: r57175

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-15  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* lang.c: Fix spelling conventions.
+
 2002-09-11  Per Bothner  <per@bothner.com>
 
 	* parse.y (fold_constant_for_init):  If a VAR_DECL, convert numerical
