--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2002-09-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* i386-protos.h (i386_pe_dllexport_name_p,
+	i386_pe_dllimport_name_p, i386_pe_unique_section,
+	i386_pe_declare_function_type, i386_pe_record_external_function,
+	i386_pe_record_exported_symbol, i386_pe_asm_file_end): Add
+	prototype.
+	* i386/t-cygwin (winnt.o): Depend on $(TM_P_H).
+	* i386/t-interix (winnt.o): Likewise.
+
 	* v850-protos.h (v850_output_addr_const_extra): Prototype.
 
 2002-09-15  Jason Thorpe  <thorpej@wasabisystems.com>
