--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,6 +1,6 @@
 2002-09-15  Kazu Hirata  <kazu@cs.umass.edu>
 
-	* lang.c: Fix spelling conventions.
+	* lang.c: Follow spelling conventions.
 
 2002-09-11  Per Bothner  <per@bothner.com>
 
