--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-15  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* intdoc.texi: Regenerate.
+
+2002-09-15  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* ChangeLog: Follow spelling conventions.
 	* intdoc.in: Likewise.
 
