--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -3247,7 +3247,7 @@ Wed Nov 22 00:52:55 2000  J"orn Rennecke <amylaar@redhat.com>
 
 2000-11-21  Jakub Jelinek  <jakub@redhat.com>
 
-	* configure.in (HAVE_AS_DWARF2_DEBUG_LINE): Sparc has .file/.loc
+	* configure.in (HAVE_AS_DWARF2_DEBUG_LINE): SPARC has .file/.loc
 	support in as as well.
 	* configure: Regenerate.
 
