--- a/gcc/ChangeLog.6
+++ b/gcc/ChangeLog.6
@@ -6891,7 +6891,7 @@ Sat Nov  3 10:37:56 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 2001-11-01  David S. Miller  <davem@redhat.com>
 
 	* doc/install.texi (Specific, sparc-sun-solaris2*): Bring
-	64-bit Sparc description more in line with reality.
+	64-bit SPARC description more in line with reality.
 
 2001-11-01  Joseph S. Myers  <jsm28@cam.ac.uk>
 
