--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -2410,7 +2410,7 @@ from memory or even from other types of registers.  An example is the
 from general registers, but not memory.  Some machines allow copying all
 registers to and from memory, but require a scratch register for stores
 to some memory locations (e.g., those with symbolic address on the RT,
-and those with certain symbolic address on the Sparc when compiling
+and those with certain symbolic address on the SPARC when compiling
 PIC)@.  In some cases, both an intermediate and a scratch register are
 required.
 
@@ -2790,7 +2790,7 @@ address of the stack word that points to the previous frame.
 @item SETUP_FRAME_ADDRESSES
 If defined, a C expression that produces the machine-specific code to
 setup the stack so that arbitrary frames can be accessed.  For example,
-on the Sparc, we must flush all of the register windows to the stack
+on the SPARC, we must flush all of the register windows to the stack
 before we can access arbitrary stack frames.  You will seldom need to
 define this macro.
 
@@ -5094,7 +5094,7 @@ automatically defined by @command{configure}, with value @samp{1}.
 @item SELECT_CC_MODE (@var{op}, @var{x}, @var{y})
 Returns a mode from class @code{MODE_CC} to be used when comparison
 operation code @var{op} is applied to rtx @var{x} and @var{y}.  For
-example, on the Sparc, @code{SELECT_CC_MODE} is defined as (see
+example, on the SPARC, @code{SELECT_CC_MODE} is defined as (see
 @pxref{Jump Patterns} for a description of the reason for this
 definition)
 
@@ -5138,7 +5138,7 @@ then @code{REVERSIBLE_CC_MODE (@var{mode})} must be zero.
 
 You need not define this macro if it would always returns zero or if the
 floating-point format is anything other than @code{IEEE_FLOAT_FORMAT}.
-For example, here is the definition used on the Sparc, where floating-point
+For example, here is the definition used on the SPARC, where floating-point
 inequality comparisons are always given @code{CCFPEmode}:
 
 @smallexample
