2002-09-15  Adam Megacz <adam@xwt.org>
        * java/net/natPlainSocketImpl.cc: #ifdef-shielded socket timeouts,
        which don't work on Win32 (yet).


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57180 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-15  Adam Megacz <adam@xwt.org>
+	
+	* java/net/natPlainSocketImpl.cc: #ifdef-shielded socket timeouts,
+	which don't work on Win32 (yet).
+
 2002-09-14  Adam Megacz <adam@xwt.org>
 	
 	* java/net/natPlainDatagramSocket.cc: removed #include
